--- a/src/components/styles/Nav.css
+++ b/src/components/styles/Nav.css
@@ -37,4 +37,7 @@ header a {
   .menu {
     display: none;
   }
+  header .nav-h {
+    height: 10px;
+  }
 }
